--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 h1{
     font-size: 50px;
@@ -9,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .add{
     width: 50%;
@@ -25,4 +27,14 @@ section{
     color: white;
     font-weight: 700;
 
+}
+.top-up{
+    background-image:url(images/top-banner.png);
+    background-repeat: no-repeat;
+    
+}
+.top-doun{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
