--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .name{
     color: orange;
 }
-section{
+.lavel-up{
     display: flex;
     margin-bottom: 100px;
 }
@@ -37,4 +37,34 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.about{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left; 
+}
+.school{
+    width: 50%;
+    box-shadow: 10px 10px 40px black;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 2%;
+    border-radius: 10px;
+
+}
+.color{
+    color: cornflowerblue;
+}
+#kj{
+    border-left: 9px solid red;
+}
+#jk{
+    border-left: 9px solid blue;
+}
+#tyoo{
+    text-align: center;
+
+}
+footer{
+    text-align: center;
 }
